Adicionando tags semanticas e tumb

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Wildbeast</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property='og:title' content="WildBeast - Projeto"/>
+    <meta property='og:image' content="assets/img/tumb.png"/>
+    <meta property='og:description' content="Site feito com SASS - CSS Grid Layout e Flex Box"/>
     <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
